# InSARLite

./: .gitignore  .readthedocs.yaml  CHANGELOG_v1.2.0.md  DEPLOYMENT_CHECKLIST.md  GITHUB_RELEASE_v1.2.0.md  PYPI_SETUP.md  README.md  README_backup.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.2.md  config.json  pypicommands.sh  pyproject.toml  setup.cfg
.github/: README.md
.github/workflows/: docs.yml  python-publish.yml
dev_summaries/: EXECUTION_GUIDE.md  READTHEDOCS_SETUP.md  performance_comparison.py
docs/: requirements.txt
docs/source/: about.md  changelog.md  conf.py  contributing.md  index.md  installation.md  license.md  quickstart.md  release-notes.md
docs/source/_static/: custom.css
docs/source/developer-guide/: index.md
docs/source/tutorials/: index.md  turkey-case-study.md
docs/source/user-guide/: case-study.md  data-management.md  index.md  interface.md  overview.md  visualizer.md  workflow.md
src/: config.json  config_part.json  gmt.history  insarlite.py
src/gmtsar_gui/: align_genIFGs.py  alignment.py  base2net.py  baselines_gen.py  dem_dwn.py  gacos_atm_corr.py  ifgs_generation.py  main.py  masking.py  masterselection.py  mean_corr.py  mergeIFGs.py  orbitsdownload.py  out_turn.py  out_visualize.py  out_visualize_org.py  pair_generation.py  part copy.py  part.py  part_SBAS.py  part_gacos.py  part_ifgs_gen.py  part_network.py  part_output.py  part_unwrap.py  ref_point.py  sb_inversion.py  sbas04.py  structuring.py  ts_gmtsar_sbas_full.py  unwrap.py  unwrapping.py  workflow.py
src/insarlite/: __init__.py  main.py
src/insarlite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/insarlite/gmtsar_gui/: align_genIFGs.py  alignment.py  base2net.py  data_dwn.py  ifgs_generation.py  mask.py  masterselection.py  mean_corr.py  orbitsdownload.py  out_visualize.py  pair_generation.py  sbas04.py  unwrap.py
src/insarlite/utils/: config_manager.py  data_handlers.py  earthdata_auth.py  file_operations.py  gmtsar_installer.py  matplotlib_baseline_plotter.py  ui_factory.py  utils.py
src/pipeinsar.egg-info/: SOURCES.txt  top_level.txt
src/utils/: utils.py
