[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "InSARLiteApp"
version = "0.0.2"
authors = [
  { name="Muhammad Badar Munir", email="mbadarmunir@gmail.com" },
]
description = "A GUI package for GMTSAR workflow"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "matplotlib",
  "rioxarray",
  "xarray",
  "h5netcdf",
  "tkcalendar",
  "tkintermapview",
  "requests",
  "beautifulsoup4",
  "pykml",
  "pandas",
  "asf_search",
  "shapely",
  "cartopy",
  "dask",
  "basemap; platform_system != 'Windows'",  # basemap is not available on Windows via pip
  "Pillow",
  "scipy",
  "lxml",
]


[tool.setuptools.packages]
find = {}

[project.scripts]
InSARLiteApp = "insarlite.main:main"

[project.urls]
Homepage = "https://github.com/mbadarmunir/InSARLiteApp"
Issues = "https://github.com/mbadarmunir/InSARLiteApp/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true