[metadata]
name = insarlite
version = 1.0.0
author = Muhammad Badar Munir
author_email = mbadarmunir@gmail.com
description = A comprehensive GUI application for GMTSAR-based InSAR processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbadarmunir/InSARLite
project_urls =
    Documentation = https://insarlite.readthedocs.io/
    Source = https://github.com/mbadarmunir/InSARLite
    Tracker = https://github.com/mbadarmunir/InSARLite/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
keywords = InSAR, SAR, interferometry, GMTSAR, Sentinel-1, remote sensing, geodesy

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    rioxarray
    xarray
    h5netcdf
    tkcalendar
    tkintermapview
    requests
    beautifulsoup4
    pykml
    pandas
    asf_search
    shapely
    cartopy
    dask
    packaging<24.0
    Pillow
    scipy
    lxml
    basemap; platform_system != "Windows"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    InSARLiteApp = insarlite.main:main
